--- a/ComplianceAuditCore.html
+++ b/ComplianceAuditCore.html
@@ -38,6 +38,16 @@
       background: linear-gradient(180deg, rgba(4,5,20,.95), rgba(4,5,20,.55));
       border-bottom:1px solid var(--line);
     }
+    nav{
+      display:flex; gap:8px; flex-wrap:wrap; margin-left:auto;
+    }
+    nav a{
+      color:var(--text); text-decoration:none;
+      border:1px solid var(--line); background:rgba(255,255,255,.04);
+      padding:6px 10px; border-radius:10px; font-weight:700; font-size:12px;
+      transition:.16s ease;
+    }
+    nav a:hover{border-color:var(--cyan); box-shadow:0 0 0 3px var(--cyanSoft);}
     .wrap{max-width:1250px; margin:0 auto; padding:16px;}
     .title{
       display:flex; align-items:center; gap:12px; flex-wrap:wrap;
@@ -183,7 +193,13 @@
       <h1>Compliance Audit Core v2</h1>
       <div class="sub">Entropy-anchored integrity scans • quantum-safe posture • Synaptics.Systems styling</div>
     </div>
-    <div style="margin-left:auto" class="row">
+    <nav aria-label="Synaptics navigation">
+      <a href="index.html">Suite Hub</a>
+      <a href="ComplianceCore.html">Compliance Core</a>
+      <a href="AML_Core_Engine.html">AML/CTF</a>
+      <a href="NDPS Genesis Core.html">NDSP Genesis</a>
+    </nav>
+    <div class="row">
       <button class="btn small" id="btnExport">Export Audit</button>
       <button class="btn small" id="btnReset">Reset Session</button>
     </div>
