--- a/AML_Core_Engine.html
+++ b/AML_Core_Engine.html
@@ -40,6 +40,14 @@
       background: rgba(5,7,22,.85);
       border-bottom:1px solid var(--border);
     }
+    nav{display:flex; gap:8px; flex-wrap:wrap; margin-left:auto;}
+    nav a{
+      color:var(--text); text-decoration:none;
+      border:1px solid var(--border); background:rgba(255,255,255,.04);
+      padding:6px 10px; border-radius:10px; font-weight:700; font-size:12px;
+      transition:.16s ease;
+    }
+    nav a:hover{border-color:var(--accent); box-shadow:0 0 0 3px var(--accent-soft);}
     .wrap{max-width:1200px; margin:0 auto; padding:18px;}
     .brand{
       display:flex; align-items:center; gap:14px;
@@ -154,6 +162,13 @@
       <h1>Synaptics.Systems — AML / Anti-Terror Financing Core</h1>
       <div class="sub">Authority Discrepancy Anchoring • Vessel Drift Detection • Tamper-Evident Audit</div>
     </div>
+    <nav aria-label="Synaptics navigation">
+      <a href="index.html">Suite Hub</a>
+      <a href="ComplianceCore.html">Compliance Core</a>
+      <a href="ComplianceAuditCore.html">Audit Core</a>
+      <a href="NDPS Genesis Core.html">NDSP Genesis</a>
+      <a href="ServerFramework.html">Server Framework</a>
+    </nav>
   </div>
 </header>
 
