--- a/NDPS Genesis Core.html
+++ b/NDPS Genesis Core.html
@@ -27,16 +27,27 @@
     --shadow: 0 18px 60px rgba(0,0,0,.6);
   }
   *{box-sizing:border-box}
-  body{
-    margin:0; color:var(--text);
-    font-family:system-ui, -apple-system, Segoe UI, Roboto, Arial;
-    background:
+body{
+  margin:0; color:var(--text);
+  font-family:system-ui, -apple-system, Segoe UI, Roboto, Arial;
+  background:
       radial-gradient(1000px 600px at 75% -10%, rgba(18,240,255,0.12), transparent 60%),
       radial-gradient(900px 600px at 10% 10%, rgba(124,60,255,0.13), transparent 55%),
       radial-gradient(1200px 900px at 50% 120%, rgba(60,229,124,0.10), transparent 65%),
       linear-gradient(180deg, var(--bg) 0%, var(--bg2) 100%);
-    overflow-x:hidden;
-  }
+  overflow-x:hidden;
+}
+
+nav{
+  display:flex; gap:8px; flex-wrap:wrap; margin-left:auto;
+}
+nav a{
+  color:var(--text); text-decoration:none; font-weight:700; font-size:12px;
+  padding:6px 10px; border-radius:10px;
+  border:1px solid var(--border); background:rgba(255,255,255,.05);
+  transition:.16s ease;
+}
+nav a:hover{border-color:var(--accent); box-shadow:0 0 0 3px var(--accent-soft);}
 
   /* Ambient layers */
   .stars,.gridglow,.scanlines,.vignette,.nebula{
@@ -256,6 +267,14 @@
         <div class="subtitle">Ultra Static Authority Console • Synaptics.Systems</div>
       </div>
     </div>
+    <nav aria-label="Synaptics navigation">
+      <a href="index.html">Suite Hub</a>
+      <a href="ComplianceCore.html">Compliance Core</a>
+      <a href="ComplianceAuditCore.html">Audit Core</a>
+      <a href="AML_Core_Engine.html">AML / CTF</a>
+      <a href="ServerFramework.html">Server Framework</a>
+      <a href="AdminControl.html">Admin Control</a>
+    </nav>
     <div class="row" style="align-items:center;">
       <div class="badge mono" id="coreVersionBadge">CORE</div>
       <div class="badge mono" id="buildBadge">BUILD</div>
