Enforce login gating for vault access

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
         <a href="ComplianceAuditCore.html">Audit Core</a>
         <a href="AML_Core_Engine.html">AML / CTF</a>
         <a href="NDPS Genesis Core.html">NDSP Genesis</a>
+        <a href="LoginSystem.html">Login &amp; Vault</a>
       </nav>
     </div>
   </header>
